--- a/style.css
+++ b/style.css
@@ -13,10 +13,15 @@
     
 }
 #display{
+    font-size: 30px;
+    text-align: end;
     background-color: rgb(85, 223, 216);
     grid-area: display;
     /*grid-row: 1/2;
     grid-column: 1/6;*/
+}
+p{
+    padding: 0px 20px;
 }
 #buttons{
     /*grid-row: 2/6;
