--- a/style.css
+++ b/style.css
@@ -1,9 +1,18 @@
+body{
+    
+    background: rgb(0,0,0);
+    background: linear-gradient(90deg, rgba(0,0,0,0.2571820891305302) 0%, rgba(85,190,39,0.2571820891305302) 27%, rgba(231,176,14,0.4341483812653617) 100%);}
+#container{
+    text-align: center;
+    font-family: sans-serif;
+}
 #calculator{
+    
     display: grid;
     border: 2px solid black;
     width: 500px;
     height: 500px;
-    margin:50px auto;
+    margin:100px auto;
     grid-template-columns:repeat(5,1fr) ;
     grid-template-rows: repeat(5,1fr);
     grid-template-areas: 
@@ -14,6 +23,7 @@
         "button button button button button";
     
 }
+
 #display{
     font-size: 30px;
     text-align: end;
@@ -32,7 +42,10 @@ p{
     grid-area: button;
     display: grid;
     grid-template-columns: repeat(5,1fr);
-    grid-template-rows: repeat(4,1fr);}
+    grid-template-rows: repeat(4,1fr);
+    background-color: #fff;
+}
+    
 .button{
     
     display: flex;
